# kicad-jlcpcb-tools

./: .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .yamllint  CLAUDE.md  HOOKS.md  LICENSE  PLUGIN_README.md  README.md  VERSION  VERSION.bak  __init__.py  __main__.py  bom_estimator.py  bom_widget.py  const.py  corrections.py  datamodel.py  dataview_highlight.py  derive_params.py  events.py  export_api.py  fabrication.py  footprint_helpers.py  footprint_metadata.py  generate_hooks.py  helpers.py  ipc_client.py  ipc_impl.py  ipc_plugin_main.py  ipc_plugin_main_test.py  jlcparts_db_convert.py  kicad_api.py  kicad_cli.py  kicad_drc.py  lcsc_api.py  library.py  mainwindow.py  partdetails.py  partmapper.py  (+20 more)
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: addon-release.yml  autoblack-pr.yaml  autoblack-pr.yml  autoblack-push.yml  autoblack.yml  black.yml  bootstrap.yml  kicad-pcm.yml  linter.yml  tests.yml  update_parts_database.yml
PCM/: create_pcm_archive.sh  metadata.template.json
addons/: packages.json  repository.json
addons/jlcpcb_tools_library/: manifest.json
addons/jlcpcb_tools_library/footprints/JLCPCB.pretty/: JLCPCB_OrderNumber.kicad_mod  JLCPCB_ToolingHole.kicad_mod
addons/jlcpcb_tools_library/symbols/: JLCPCB.kicad_sym
addons/jlcpcb_tools_plugin/: manifest.json
addons/jlcpcb_tools_plugin/plugins/: __init__.py  events.py  library.py  partmapper.py  plugin.py  rotations.py  schematicexport.py  settings.py  unzip_parts.py
bom_estimation/: __init__.py  help_text.py  pricing.py  settings_migration.py  view.py
common/: __init__.py  componentdb.py  conftest.py  filemgr.py  jlcapi.py  partsdb.py  progress.py  test_bom_estimator.py  test_bom_estimator_enrichment.py  test_bom_estimator_help_text.py  test_bom_estimator_pricing.py  test_bom_estimator_settings_migration.py  test_bom_estimator_view.py  test_componentdb.py  test_export_plan.py  test_fabrication_gerber_drill_inventory.py  test_fabrication_gerber_drill_parity.py  test_fabrication_gerber_golden.py  test_fabrication_parity.py  test_filemgr.py  test_ipc_client.py  test_ipc_e2e.py  test_ipc_export_plan.py  test_ipc_impl.py  test_ipc_init.py  test_jlcapi.py  test_kicad_adapters.py  test_kicad_provider.py  test_library_escape.py  test_partsdb.py  test_partselector_highlight.py  test_store_pad_filter.py  test_translate.py  translate.py
core/: version.py
db_build/: README.md  __init__.py  componentdb.py  jlcapi.py  jlcparts_db_convert.py
dblib/: __init__.py  test_dblibrary.py
docs/: ipc-migration-plan.md  ipc-plugin-conversion-plan.md
enrichment/: __init__.py  providers.py
lib/packaging-25.0.dist-info/: RECORD
scripts/: example_post_generate_git_checkpoint.sh
tests/: __init__.py  test_bom_designator_split.py  test_bom_estimator_controller.py  test_fabrication_corrections.py
tests/fixtures/: ipc_plugin_boot.py
tests/fixtures/gerber_golden/2layer/: CuBottom.gbr  CuTop.gbr  JLC_ASSY.gbr  PasteBottom.gbr  SilkBottom.gbr  SilkTop.gbr  drill.drl
tests/fixtures/gerber_golden/4layer/: CuIn1.gbr  CuIn2.gbr  EdgeCuts.gbr  MaskBottom.gbr  MaskTop.gbr  PasteTop.gbr
